[project]
name = "nexusviewpro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ensure==1.0.2",
    "flake8==5.0.4",
    "mkdocs-material>=9.7.1",
    "mypy==0.971",
    "py-youtube==1.1.7",
    "pytest==7.1.3",
    "tox==3.25.1",
]
