[project]
name = "nexusviewpro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ensure==1.0.2",
    "flake8==5.0.4",
    "mkdocs-material>=9.7.1",
    "mypy==0.971",
    "py-youtube==1.1.7",
    "pytest==7.1.3",
    "setuptools==65.5.0",
    "tox==3.25.1",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
nexusviewpro = { workspace = true }

[dependency-groups]
dev = [
    "ensure==1.0.2",
    "flake8==5.0.4",
    "mkdocs-material>=9.7.1",
    "mypy==0.971",
    "nexusviewpro",
    "py-youtube==1.1.7",
    "pytest==7.1.3",
    "tox==3.25.1",
]

build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests"
    ]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true
